tdksoftonline/k8s/base/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tdk-backend
  namespace: academy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tdk-site
  template:
    metadata:
      labels:
        app: tdk-site
    spec:
      containers:
      - name: backend 
        image: python:3.10-slim # Temporary Image, ill be replace by the CI
        ports:
        - containerPort: 8000
