tdksoftonline/k8s/base/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdk-academy-service
  namespace: academy

spec:
  selector:
    app: tdk-site
  ports:
    - protocol: TCP
      port: 80         # Exposed port for the service in the cluster
      targetPort: 8000 # Port on which your FastAPI listens (Dockerfile)
  type: ClusterIP
